2008-01-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c
	* src/launcher/hd-launcher.c
	* src/util/hd-transition.c
	* src/util/hd-util.c
	* src/util/hd-transition.h

	Moved application started/closed noise making from the navigator
	to the launcher (hd_launcher_transition_app_start()) and
	hd_transition_close_app().

2008-12-30  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-theme.c: further movement towards progress indicator;
	  displays correctly, but needs to be per-window not singleton.

2008-12-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Restart always-on dbus services if disconnected.

	* src/launcher/hd-launcher.c (tree, dbus_proxy,
	  DBUS_NAMEOWNERCHANGED_SIGNAL_NAME, hd_launcher_init,
	  hd_launcher_lazy_traverse_tree, hd_launcher_launch,
	  hd_launcher_service_prestart, hd_launcher_service_top,
	  hd_launcher_transition_new_frame,
	  hd_launcher_dbus_name_owner_changed):

2008-12-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_init): Simplify creation of
	the hibernation hash key: use pointer to the composite client, it is
	unique and already known.
	(hd_comp_mgr_client_get_window_role): Removed as unused.
	(hd_comp_mgr_client_get_window_class): Removed as unused.

2008-12-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.13

2008-12-24  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c:
	Now skip area updates if an effect is in progress

2008-12-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h
	* src/mb/hd-comp-mgr.c:
	Removed desktop grab for Task Launcher as it wasn't required.
	Added code to use signals to queue redraws in order to avoid
	multiple redraws when several different areas are damaged.

2008-12-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c: