@@ -1,5 +1,14 @@
 2008-01-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	NB#95641
+
+	* src/mb/hd-note.c:
+	  Instead of ignoring ->stack() requests set the layer to Bottom
+	  in case of HdNoteTypeIncomingEvent:s.  matchbox is in the belief
+	  that the first client of its type wants to stack itself higher.
+
+2008-01-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	* src/home/hd-task-navigator.c
 	* src/launcher/hd-launcher.c
 	* src/util/hd-transition.c
